[package]
name = "stomp-agnostic"
version = "0.8.0"
description = "A transport agnostic, asynchronous, STOMP client"
authors = [
    "Erik Živković <erik@zkc.se>",
    "Mattias Eriksson <snaggen@mayam.com>",
    "Alex Whitney <adwhit@fastmail.com>",
    "Jens Walter <jens@apimeister.com>",
    "Alexander Kunde <a.kunde@outlook.com>",
    "Jacques Joubert <jjoubert@kigo.io>",
]
repository = "https://github.com/bes/stomp-agnostic"
homepage = "https://github.com/bes/stomp-agnostic"
keywords = ["stomp", "async"]
license = "EUPL-1.2"
readme = "README.md"
categories = ["network-programming", "parser-implementations"]
edition = "2024"

[dependencies]
bytes = "1.11.0"
custom_debug_derive = "0.6.2"
anyhow = "1.0.100"
thiserror = "2.0.17"
winnow = "0.7.14"
async-trait = "0.1.89"
